<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_playlist"
        android:icon="@drawable/ic_menu_playlist"
        android:title="@string/menu_item_playlist" />
    <item
        android:id="@+id/menu_album"
        android:icon="@drawable/ic_menu_album"
        android:title="@string/menu_item_album" />
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/menu_item_search" />
    <item
        android:id="@+id/menu_follower"
        android:icon="@drawable/ic_menu_follower"
        android:title="@string/menu_item_follower" />
    <item
        android:id="@+id/menu_account"
        android:icon="@drawable/ic_menu_account"
        android:title="@string/menu_item_account" />
</menu>