<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="40dp"
            android:paddingTop="80dp"
            android:text="@string/tv_login_title"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_login_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_login_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/tv_login_id_title"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/layout_login_id"
            app:layout_constraintStart_toStartOf="@id/tv_login_title" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_login_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@id/tv_login_pw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_login_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/tv_login_pw_title"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/layout_login_pw"
            app:layout_constraintStart_toStartOf="@id/tv_login_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_login_pw"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:padding="20dp"
            android:text="@string/btn_login_login"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/light_blue_A700"
            android:text="@string/btn_login_sign_up"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>