<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="org.android.go.sopt.presentation.auth.SignUpViewModel" />
    </data>

    <ScrollView
        android:id="@+id/sv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_sign_up_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/tv_signup_title"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sign_up_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:autofillHints="username"
                android:padding="2dp"
                android:text="@string/tv_signup_id_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_sign_up_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_title" />
            
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_sign_up_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sign_up_id">
                
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_sign_up_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:text="@={vm.idText}"
                    android:hint="@string/et_signup_id_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"/>
                
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_sign_up_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:text="@string/tv_signup_pw_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/layout_sign_up_id"
                app:layout_constraintTop_toBottomOf="@+id/layout_sign_up_id" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_sign_up_pw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sign_up_pw">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_sign_up_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:text="@={vm.pwText}"
                    android:hint="@string/et_signup_pw_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_sign_up_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:text="@string/tv_signup_name_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/layout_sign_up_pw"
                app:layout_constraintTop_toBottomOf="@+id/layout_sign_up_pw" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_sign_up_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sign_up_name" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_sign_up_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.nameText}"
                    android:imeOptions="actionNext"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_sign_up_skill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:text="@string/tv_signup_skill_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/layout_sign_up_name"
                app:layout_constraintTop_toBottomOf="@+id/layout_sign_up_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_sign_up_skill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sign_up_skill" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_sign_up_skill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.skillText}"
                    android:imeOptions="actionNext"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp"
                android:enabled="@{vm.buttonVaild}"
                android:paddingVertical="10dp"
                android:text="@string/btn_login_sign_up"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_sign_up_skill" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>